--- a/README
+++ b/README
@@ -31,9 +31,9 @@ Vaguely How it Works
 
 A 'server' process is spawned, this is responsible for handling the socket to the server. Currently it also handles logging in to the IRC server by spawning a login process. This just waits a few seconds then sends the USER/NICK commands. The 'server' reads data from the socket, splits it into lines, then sends those lines individually to the 'bot' process.
 
-On receiving a line, the bot spawns a process to parse the line. If the line can't be parsed then the parse process crashes, if it is successfully parsed then a message is sent back to the bot process containing the parsed packet as an erlang term.
+On receiving a line, the bot spawns a process to parse it. If the line can't be parsed then the parse process crashes. If the line is successfully parsed then a message is sent back to the bot process containing the parsed packet as an erlang term.
 
-Upon receiving an IRC packet containing a PRIVMSG sent directly from the bot owner to the bot, then spawn a handle_bot_command process and pass it the packet. If the packet doesn't contain a bot command for any reason, then the handle_bot_command process will crash and no action will be taken.
+Upon receiving an IRC packet containing a PRIVMSG sent directly from the bot owner to the bot, a bot:handle_command/2 process is spawned and given the packet. If the packet doesn't contain a bot command, then the handle_bot_command process will crash and no action will be taken.
 
 A bot command to join a channel will spawn a new 'channel' process and send a cast to it telling it to join. A channel process will stay alive after you part the channel, letting you keep any registered plugins.
 
